Fixed overflow

--- a/src/components/section/Section.css
+++ b/src/components/section/Section.css
@@ -6,6 +6,9 @@
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
+.seciton-content-wrap {
+  overflow-x: hidden;
+}
 .header-wrap {
   width: 100%;
   display: flex;
