--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ svg {
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
-  overflow: hidden;
+  overflow: visible;
 }
 .limited {
   max-width: 680px;
